--- a/test/fixtures/visits.yml
+++ b/test/fixtures/visits.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  visit_timestamp: 2018-05-23 22:23:27
+  visit_date: 2018-05-23 
   park_pass_id: 1
 
 two:
-  visit_timestamp: 2018-05-23 22:23:27
+  visit_date: 2018-05-23 
   park_pass_id: 1
