--- a/test/fixtures/park_passes.yml
+++ b/test/fixtures/park_passes.yml
@@ -6,7 +6,7 @@ one:
   first_name: MyString
   last_name: MyString
   card_number: MyString
-  card_expiration: 2018-05-23 22:12:09
+  card_expiration: 2018-05-23 
   height: 1
 
 two:
@@ -15,5 +15,5 @@ two:
   first_name: MyString
   last_name: MyString
   card_number: MyString
-  card_expiration: 2018-05-23 22:12:09
+  card_expiration: 2018-05-23
   height: 1
