--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,16 @@
 /yarn-error.log
 
 .byebug_history
+
+# Ignore possible .DS_Store files
+.DS_Store
+/app/.DS_Store
+/app/assets/.DS_Store
+/app/assets/images/.DS_Store
+/app/assets/stylesheets/.DS_Store
+/app/assets/javascripts/.DS_Store
+/public/.DS_Store
+
+# Ignore coverage files
+/coverage/*
+
