--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 
 simplecov:
   stage: test
-  image: docker.io/ruby:2.5.1
+  image: docker.io/rails:5
   script:
     - bunlde install
     - rails test
