--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ simplecov:
   image: docker.io/ruby:2.5.1
   script:
     - gem install rails -v 5.1.6
+    - gem install bundler
     - bundle install
     - rails test
   artifacts:
@@ -11,6 +12,8 @@ simplecov:
       - coverage/
   variables:
     GIT_SSL_NO_VERIFY: "true"
+  only:
+    - master
 
 pages:
   stage: deploy
@@ -22,3 +25,5 @@ pages:
     paths:
       - public
     expire_in: 30 days
+  only:
+    - master
