--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,20 @@
 
 simplecov:
   stage: test
-  image: docker.io/ruby:2.5.1
+  image: docker.io/rails:5
   script:
-    - gem install rails -v 5.1.6
-    - gem install bundler
-    - bundle install
-    - rails test
+    - apt-get update -qy
+    - apt-get install -y nodejs
+    - bundle install --path /cache
+    - bundle exec rake db:create RAILS_ENV=test
+    - bundle exec rake test
   artifacts:
     paths:
       - coverage/
   variables:
     GIT_SSL_NO_VERIFY: "true"
-  only:
-    - master
+  # only:
+  #   - master
 
 pages:
   stage: deploy
@@ -25,5 +26,5 @@ pages:
     paths:
       - public
     expire_in: 30 days
-  only:
-    - master
+  # only:
+  #   - master
