--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,8 @@
 
 simplecov:
   stage: test
-  image: docker.io/ruby:2.5.1
+  image: krismichalski/docker-rails:2.4
   script:
-    - gem install rails -v 5.1.6
     - gem install bundler
     - bundle install --gemfile=Gemfile
     - rails db:migrate
@@ -13,6 +12,6 @@ simplecov:
       - coverage/
   variables:
     GIT_SSL_NO_VERIFY: "true"
-  only:
-    - master
+  # only:
+  #   - master
 
